Temporary fix for player not showing on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,7 @@ livery-buffer-graph {
   }
 
   livery-player {
+    height: 50vh;
     width: 100%;
   }
 
